[gd_scene load_steps=13 format=3 uid="uid://delb0vr0vc0cc"]

[ext_resource type="Script" path="res://scripts/corridor_slope.gd" id="1_w4wwj"]
[ext_resource type="Material" uid="uid://dakuvjq0jwhg8" path="res://materials/wood_corridor_material.tres" id="2_ugxse"]
[ext_resource type="Material" uid="uid://7hen55jioufw" path="res://materials/outline_material.tres" id="3_o4nxa"]
[ext_resource type="Material" uid="uid://dvo1r1d1ypcta" path="res://materials/floor_material_0.tres" id="4_saacp"]
[ext_resource type="Material" uid="uid://3be68um7y4vv" path="res://materials/floor_material_0_top.tres" id="5_8pfbq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_d6r7e"]
resource_local_to_scene = true
size = Vector3(0.5, 4, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_lef5f"]
resource_local_to_scene = true
size = Vector3(1.5, 0.1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_fdslq"]
resource_local_to_scene = true
material = ExtResource("2_ugxse")
size = Vector3(0.5, 4, 3)

[sub_resource type="PlaneMesh" id="PlaneMesh_kwqyh"]
resource_local_to_scene = true
material = ExtResource("3_o4nxa")
size = Vector2(0.5, 3)

[sub_resource type="PlaneMesh" id="PlaneMesh_j2ho1"]
resource_local_to_scene = true
material = ExtResource("4_saacp")
size = Vector2(2, 3)

[sub_resource type="PlaneMesh" id="PlaneMesh_b2vbi"]
resource_local_to_scene = true
material = ExtResource("5_8pfbq")
size = Vector2(2, 3)

[sub_resource type="PlaneMesh" id="PlaneMesh_lm2df"]
resource_local_to_scene = true
material = ExtResource("2_ugxse")
size = Vector2(2, 3)

[node name="Corridor" type="StaticBody3D"]
collision_layer = 8
collision_mask = 6
script = ExtResource("1_w4wwj")

[node name="LeftCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
shape = SubResource("BoxShape3D_d6r7e")

[node name="RightCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
shape = SubResource("BoxShape3D_d6r7e")

[node name="FloorCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_lef5f")

[node name="LeftWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
mesh = SubResource("BoxMesh_fdslq")

[node name="RightWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
mesh = SubResource("BoxMesh_fdslq")

[node name="LeftOutline" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2.05, 0)
layers = 4
mesh = SubResource("PlaneMesh_kwqyh")

[node name="RightOutline" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2.05, 0)
layers = 4
mesh = SubResource("PlaneMesh_kwqyh")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("PlaneMesh_j2ho1")

[node name="FloorTop" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.02, 0)
layers = 4
mesh = SubResource("PlaneMesh_b2vbi")

[node name="Ceiling" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 1.51, 0)
mesh = SubResource("PlaneMesh_lm2df")
